<resources>
    <string name="app_name">Kasa.in.ua</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string-array name="nav_drawer_items">
        <item>Events</item>
        <item>Search event</item>
        <item>Cart</item>
        <item>My orders</item>
        <item> Ticket offices</item>
        <item>Contacts</item>
        <item>About</item>
        <item>Your account</item>
        <item>Login/Register</item>
    </string-array>
    <string name="facebook_app_id" translatable="false">612867968812786</string>
    <string name="price">Prices</string>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_main">ViewPager GridView</string>
    <string name="action_remove_item">Remove item</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_activity_order">ActivityOrder</string>
    <string name="title_activity_activity_successful_order">ActivitySuccessfulOrder</string>
    <string name="page_main_alert_basket">Your cart is empty!</string>
    <string name="page_main_alert_history_order"> History is available only for signed in users.</string>
    <string name="page_about_app_all_rights_reserved"> All rights reserved. kasa.in.ua © </string>
    <string name="page_about_app_version">Version</string>
    <string name="page_about_app_logo_kasa"> LogoKasa1 </string>
    <string name="page_about_app_logo_kasa2"> LogoKasa2 </string>
    <string name="page_about_app_logo_web_clever"> LogoWebClever </string>
    <string name="page_contacts_ticket_office_network">TICKET OFFICE NETWORK</string>
    <string name="page_contacts_phones">Phone:</string>
    <string name="page_contacts_kasa_phone1"><u>+38 093 0000 754,</u></string>
    <string name="page_contacts_kasa_phone2"><u>+38 066 0000 754,</u></string>
    <string name="page_contacts_kasa_phone3"><u>+38 097 0000 754.</u></string>
    <string name="page_contacts_site"><u>Web-site:</u></string>
    <string name="page_contacts_web_site_kasa_in_ua"><u>www.kasa.in.ua</u></string>
    <string name="page_contacts_email"><u>E-mail:</u></string>
    <string name="page_contacts_email_kasa_in_ua"><u>info@kasa.in.ua</u></string>
    <string name="page_contacts_button">Ticket offices of your city</string>
    <string name="page_contacts_send_message">Send message</string>
    <string name="page_contacts_not_have_app_for_send_message"> Can\'t find App to send this message.</string>
    <string name="page_location_kasa_select_city">Select city</string>
    <string name="page_location_kasa_list_work_time">Work time</string>
    <string name="page_location_kasa_list_show_on_map">Show on map</string>
    <string name="page_location_kasa_show_pay_offices">Show ticket offices in your city</string>
    <string name="page_delivery_order_next"> NEXT </string>
    <string name="page_delivery_order_ticket_reserved">tickets will be reserved yet: </string>
    <string name="page_delivery_order_list_created">Created: </string>
    <string name="page_delivery_order_list_delivery_method">Delivery method:</string>
    <string name="page_delivery_order_list_payment_method">Payment method:</string>
    <string name="page_delivery_order_list_delivery_status">Delivery status:</string>
    <string name="page_delivery_order_list_status_of_payment">Payment status:</string>
    <string name="page_home_search_event_button">BUY</string>
    <string name="home_search_show_events_in_city">Show events in this city</string>
    <string name="page_search_event_title">Search event</string>
    <string name="page_basket_button_next">NEXT</string>
    <string name="page_basket_sum">TOTAL: </string>
    <string name="page_basket_list_name_row">Row: </string>
    <string name="page_basket_list_name_place">Seat: </string>
    <string name="page_basket_ticket_already_sale_dialog"> Some of the selected seats are already taken! </string>
    <string name="page_basket_sig_in_or_log_in"> Login or register. </string>
    <string name="page_event_description">EVENT DESCRIPTION</string>
    <string name="page_event_read_more">READ MORE…</string>
    <string name="page_event_photo_gallery">GALLERY</string>
    <string name="page_event_buy_ticket">BUY TICKET</string>
    <string name="page_event_title">Event</string>
    <string name="page_event_alert_message">No vacant seats</string>
    <string name="page_select_place_in_basket">"In cart: "</string>
    <string name="page_select_place_not_available">Not available</string>
    <string name="page_select_place_reserve">Booked</string>
    <string name="page_select_place_sale">Sold</string>
    <string name="page_select_place_in_basket1">In cart</string>
    <string name="page_select_place_grn">" UAH" </string>
    <string name="page_select_sum"> "TOTAL "</string>
    <string name="page_select_max_ticket"> You can`t add to cart more than 50 tickets. </string>
    <string name="page_user_profile_user_message"> Message </string>
    <string name="page_user_profile_method_authorization"> Authorize using </string>
    <string name="page_user_profile_user_surname1">Last Name*</string>
    <string name="page_user_profile_user_surname">First Name* </string>
    <string name="page_user_profile_user_last_name"> Middle Name </string>
    <string name="page_user_profile_user_phone"> Phone* </string>
    <string name="page_user_profile_user_email"> E-mail* </string>
    <string name="page_user_profile_user_country"> Country </string>
    <string name="page_user_profile_user_city"> City </string>
    <string name="page_user_profile_user_address"> Delivery to door address </string>
    <string name="page_user_profile_user_new_post_department"> Nearest “Nova Poshta” department number </string>
    <string name="page_user_profile_user_button_change_password"> Change password </string>
    <string name="page_user_profile_user_button_exit"> Logout </string>
    <string name="page_user_profile_user_save_changes"> Save changes </string>
    <string name="page_user_profile_select_city"> Enter your city </string>
    <string name="page_user_profile_save_changes"> Saved successfully! </string>
    <string name="page_user_change_password_old_password"> Old password* </string>
    <string name="page_user_change_password_new_password"> New password* </string>
    <string name="page_user_change_password_description_new_password"> Not less than 8 symbols using letters and numbers </string>
    <string name="page_user_change_password_confirm_new_password"> Confirm new password* </string>
    <string name="page_user_change_password_successful"> Password changed! </string>
    <string name="page_login_social_networks"> Social networks </string>
    <string name="page_login_login_password"> Login and password </string>
    <string name="page_login_email"> E-mail </string>
    <string name="page_login_password"> Password </string>
    <string name="page_login_enter"> LOGIN </string>
    <string name="page_login_forgot_password"><u>Forgot your password?</u></string>
    <string name="page_login_tabs_enter"> Login </string>
    <string name="page_login_tabs_register"> Registration </string>
    <string name="page_remember_password"> Enter your account e-mail. You will receive a link for password changing. </string>
    <string name="page_remember_enter_email"> Enter e-mail </string>
    <string name="page_remember_send_password"> SEND PASSWORD </string>
    <string name="page_create_account"> Registration </string>
    <string name="page_create_account_password1">Password*</string>
    <string name="page_create_account_password2">Confirm password*</string>
    <string name="page_create_account_button_create_account"> Create account </string>
    <string name="page_create_account_passwords_not_match"> Passwords aren\'t matching </string>
    <string name="page_registration_confirm"> Fill in and check all the fields below: </string>
    <string name="page_registration_success"> You are registered successfully! </string>
    <string name="page_success_registration_congratulation"> Congratulations! </string>
    <string name="page_success_registration_user_register"> You are registered in ticket selling system kasa.in.ua! </string>
    <string name="page_success_registration_description"> Your account provides access to kasa.in.ua website and all its apps!</string>
    <string name="page_success_registration_bright_impressions"> Get bright impressions! </string>
    <string name="page_delivery_order_reserved_ticket"> TICKETS WILL BE BOOKED FOR: </string>
    <string name="page_delivery_delivery_method"> SELECT DELIVERY METHOD </string>
    <string name="page_delivery_kasa_in_ua"> Take from ticket office </string>
    <string name="page_delivery_new_post"> Take from “Nova Poshta” department </string>
    <string name="page_delivery_courier"> Courier delivery </string>
    <string name="page_delivery_eticket"> E-ticket </string>
    <string name="page_delivery_pay_method"> SELECT PAYMENT METHOD </string>
    <string name="page_delivery_pay_kasa"> Pay by cash </string>
    <string name="page_delivery_pay_new_post"> Pay by cash </string>
    <string name="page_delivery_pay_courier"> Pay by cash </string>
    <string name="page_delivery_pay_card"> Pay by credit card </string>
    <string name="page_delivery_chose_delivery_method"> Select payment method! </string>
    <string name="page_delivery_order_canceled"> Booking is cancelled! </string>
    <string name="page_success_description_order"> Your order has been created and paid successfully! </string>
    <string name="page_success_order_description_order1"> Your order has been created successfully! </string>
    <string name="page_success_order_number_ordering_kasa"> You can pay for your order and get your tickets in the nearest ticket office. </string>
    <string name="page_success_order_number_ordering_text">You can get your tickets in the nearest ticket office.</string>
    <string name="page_success_order_description_order2"> Tickets will be sent to appropiate department of “Nova Poshta” within three working days. </string>
    <string name="page_success_order_description_courier"> Tickets will be delivered to you by courier within three working days. </string>
    <string name="page_success_order_description_eticket"> Tickets are sent to your email. Please, read e-ticket Terms of use in the attached letter. </string>
    <string name="page_success_order_description_no_pay">You can continue payment process using link sent to your e-mail.</string>
    <string name="page_success_order_description_number_order"> Your order number! </string>
    <string name="page_order_toast_error_delete_temp_order">Unexpected error appeared while deleting temporary order!</string>
    <string name="page_order_time_up_temp_order_dialog">Unfortunately, the time allowed for ordering is over, your temporary order was cancelled.</string>
    <string name="page_order_check_exit_temp_order_dialog"> if you leave this page your temporary order will be cancelled! </string>
    <string name="page_order_attention">Attention!</string>
    <string name="page_order_cancel">Cancel</string>
    <string name="page_dialog_order_time"> Your tickets are booked for 5 min during order processing </string>
    <string name="page_dialog_not_ask_again"> Don`t ask again </string>
    <string name="page_dialog_not_want"> Don`t want</string>
    <string name="page_restore_password_send"> Your password was sent successfully! </string>
    <string name="page_confirm_ticket_toast_not_valid_phone"> Incorrect phone format</string>
    <string name="page_pay_exit_from_pay_page"> Do you want to leave ordering page? </string>
    <string name="fragment_uer_data_kasa">COMPLETE CONTACT INFORMATION</string>
    <string name="page_data_issue_order"> Create order </string>
</resources>