<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:paddingBottom="5dp"
    android:layout_height="wrap_content" tools:context="webclever.sliding_menu.FragmentContacts">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_kasa1"
        android:id="@+id/imageView12"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/page_about_app_logo_kasa" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="16sp"
        android:textColor="@color/year"
        android:text="@string/page_contacts_ticket_office_network"
        android:id="@+id/textView31"
        android:layout_below="@+id/imageView12"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="15sp"
        android:textColor="@color/yellov1"
        android:text="@string/page_contacts_phones"
        android:id="@+id/textView32"
        android:layout_below="@+id/textView31"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:background="?android:selectableItemBackground"
        android:textSize="15sp"
        android:textColor="@color/price"
        android:text="@string/page_contacts_kasa_phone3"
        android:id="@+id/textView33"
        android:layout_below="@+id/textView97"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="15sp"
        android:textColor="@color/yellov1"
        android:text="@string/page_contacts_site"
        android:id="@+id/textView44"
        android:layout_below="@+id/textView33"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:background="?android:selectableItemBackground"
        android:textSize="15sp"
        android:textColor="@color/price"
        android:text="@string/page_contacts_web_site_kasa_in_ua"
        android:id="@+id/textViewKasaInUa"
        android:layout_below="@+id/textView44"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="15sp"
        android:textColor="@color/yellov1"
        android:text="@string/page_contacts_email"
        android:id="@+id/textView96"
        android:layout_below="@+id/textViewKasaInUa"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:background="?android:selectableItemBackground"
        android:textSize="15sp"
        android:textColor="@color/price"
        android:text="@string/page_contacts_email_kasa_in_ua"
        android:id="@+id/textViewMailKasa"
        android:layout_below="@+id/textView96"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_selector"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:text="@string/page_contacts_button"
        android:id="@+id/button_kasa_adress"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:background="?android:selectableItemBackground"
        android:textSize="15sp"
        android:textColor="@color/price"
        android:text="@string/page_contacts_kasa_phone1"
        android:id="@+id/textView46"
        android:layout_below="@+id/textView32"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:background="?android:selectableItemBackground"
        android:textSize="15sp"
        android:textColor="@color/price"
        android:text="@string/page_contacts_kasa_phone2"
        android:id="@+id/textView97"
        android:layout_below="@+id/textView46"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp" />


</RelativeLayout>
