<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
<RelativeLayout android:background="@color/white" android:layout_margin="5dp"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/page_success_registration_congratulation"
        android:id="@+id/textView88"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/page_success_registration_user_register"
        android:id="@+id/textView89"
        android:layout_below="@+id/textView88"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/page_success_registration_description"
        android:id="@+id/textView90"
        android:layout_below="@+id/textView89"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/page_success_registration_bright_impressions"
        android:id="@+id/textView91"
        android:layout_below="@+id/textView90"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/page_basket_button_next"
        android:id="@+id/buttonSuccessContinue"
        android:background="@drawable/button_selector"
        android:textColor="@color/white"
        android:layout_below="@+id/textView91"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />
</RelativeLayout>
</FrameLayout>